# wavetoearth

./: .gitignore  README.md  claude_handoff.md  cli.py  debug_rust.py  install.sh  mcp_server.py  pyproject.toml  requirements.txt  server.py  verify_fst.py  wavetoearth.py
.github/workflows/: publish.yml
analysis/: compare_iree_baremetal.py
core/: semantic_analyzer.py  vcd_parser.py
docs/: AGENT_GUIDE.md  API_REFERENCE.md  CONCEPTS.md  EXAMPLES.md  OUTPUT_SCHEMA.md
tests/: dummy.fst  dummy.vcd  simple.fst  simple.vcd  verify.py  verify_vcdvcd.py
wavetoearth_core/: Cargo.toml  pyproject.toml
wavetoearth_core/examples/: debug_fst.rs
wavetoearth_core/src/: fst_parser.rs  lib.rs  vcd_parser.rs
