[project]
name = "wavetoearth"
version = "0.1.0"
description = "Agentic RTL Waveform Analysis Tool"
authors = [
    {name = "Antigravity", email = "antigravity@deepmind.com"},
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "numpy",
    "typer",
    "pydantic",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# No longer a package in wavetoearth/wavetoearth, but scripts might need adjustment.
# For now, simplistic setup.
