[project]
name = "wavetoearth"
version = "0.1.0"
description = "Agentic RTL Waveform Analysis Tool"
authors = [
    {name = "Antigravity", email = "antigravity@deepmind.com"},
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "numpy",
    "typer",
    "pydantic",
    "requests",
    "duckdb",
    "pyarrow",
    "redis",
]
requires-python = ">=3.9"

[project.scripts]
wavetoearth = "cli:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "cli.py",
    "server.py",
    "core",
    "README.md",
    "requirements.txt",
]
