[project]
name = "wavetoearth"
version = "0.1.0"
description = "Agentic RTL Waveform Analyzer - MCP Server for AI-powered hardware debugging"
authors = [
    {name = "Antigravity", email = "antigravity@deepmind.com"},
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["vcd", "fst", "waveform", "rtl", "hardware", "debugging", "mcp", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "numpy",
    "typer",
    "pydantic",
    "requests",
    "duckdb",
    "pyarrow",
    "redis",
    "mcp>=1.0.0",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/pingu-73/wavetoearth"
Repository = "https://github.com/pingu-73/wavetoearth"
Issues = "https://github.com/pingu-73/wavetoearth/issues"

[project.scripts]
wavetoearth = "cli:main_cli"
wavetoearth-mcp = "mcp_server:main"

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
manifest-path = "wavetoearth_core/Cargo.toml"
module-name = "wavetoearth_core"
