[package]
name = "wavetoearth_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "wavetoearth_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
vcd = "0.6"
anyhow = "1.0"
wellen = "0.10"
parquet = "53.0"
arrow = "53.0"
rayon = "1.8"
memmap2 = "0.9"
memchr = "2.7"
lz4_flex = "0.11"
rustc-hash = "1.1"
fst-native = "0.8.1"
[[example]]
name = "probe_wellen"
path = "examples/probe_wellen.rs"
